--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -7,7 +7,8 @@
 @import "type";
 @import "images";
 @import "code";
-@import "grid";
+// @import "grid";
+@import "helpers/_grid";
 @import "tables";
 @import "forms";
 @import "buttons";
