--- a/source/index.pug
+++ b/source/index.pug
@@ -5,15 +5,43 @@ html(lang="en")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     title Document
-    link(href='https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i', rel='stylesheet')
+    link(href='https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i,900,900i', rel='stylesheet')
     link(rel='stylesheet', href='https://use.fontawesome.com/releases/v5.0.13/css/all.css', integrity='sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp', crossorigin='anonymous')
     link(rel="stylesheet", href="stylesheets/all.css")
-    script.
-      FontAwesomeConfig = { searchPseudoElements: true };
-    script(src="https://www.gstatic.com/charts/loader.js")
-  body.bg-light
-    #app 
-      
-    script(src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js")
-    script(src="https://unpkg.com/axios/dist/axios.min.js")
+  body
+    .wrap
+      header
+        span CCCLOTHES
+        .h1 MEN’S TOPS
+      main
+        .product.product-1
+          h2.product-title LINEN BLAZER
+          .product-num 01
+          .product-subtitle Men’s outfit
+        .product.product-2
+          h2.product-title FREELIFT
+          .product-num 02
+          .product-subtitle Men’s basics
+        .product.product-3
+          h2.product-title SUPER SKINNY
+          .product-num 03
+          .product-subtitle Men’s pattern shirts
+        .product.product-4
+          h2.product-title DENIM
+          .product-num 04
+          .product-subtitle Men’s cadual
+        .product.product-5
+          h2.product-title SWEATSHIRTS
+          .product-num 05
+          .product-subtitle Men’s jacket
+        .product.product-6
+          h2.product-title VINTAGE DENIM
+          .product-num 06
+          .product-subtitle Men’s classic
+        .product.product-7
+          h2.product-title EDITION
+          .product-num 07
+          .product-subtitle Men’s shirts
+    //- script(src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js")
+    //- script(src="https://unpkg.com/axios/dist/axios.min.js")
     script(src="javascripts/vendor.js")
