--- a/source/index.pug
+++ b/source/index.pug
@@ -15,31 +15,31 @@ html(lang="en")
         .h1 MEN’S TOPS
       main
         .product.product-1
-          h2.product-title LINEN BLAZER
+          h2.product-title(data-title="LINEN BLAZER") LINEN BLAZER
           .product-num 01
           .product-subtitle Men’s outfit
         .product.product-2
-          h2.product-title FREELIFT
+          h2.product-title(data-title="FREELIFT") FREELIFT
           .product-num 02
           .product-subtitle Men’s basics
         .product.product-3
-          h2.product-title SUPER SKINNY
+          h2.product-title(data-title="SUPER SKINNY") SUPER SKINNY
           .product-num 03
           .product-subtitle Men’s pattern shirts
         .product.product-4
-          h2.product-title DENIM
+          h2.product-title(data-title="DENIM") DENIM
           .product-num 04
           .product-subtitle Men’s cadual
         .product.product-5
-          h2.product-title SWEATSHIRTS
+          h2.product-title(data-title="SWEATSHIRTS") SWEATSHIRTS
           .product-num 05
           .product-subtitle Men’s jacket
         .product.product-6
-          h2.product-title VINTAGE DENIM
+          h2.product-title(data-title="VINTAGE DENIM") VINTAGE DENIM
           .product-num 06
           .product-subtitle Men’s classic
         .product.product-7
-          h2.product-title EDITION
+          h2.product-title(data-title="EDITION") EDITION
           .product-num 07
           .product-subtitle Men’s shirts
     //- script(src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js")
