--- a/source/stylesheets/_main.scss
+++ b/source/stylesheets/_main.scss
@@ -22,9 +22,18 @@ header {
   }
 }
 
-// ====  主要區域  ====
+// ===主要區域====
+/*通用設定*/
+
 .product {
   position: relative;
+  /*區塊裝飾*/
+  &::after,
+  &::before {
+    content: "";
+    display: block;
+    position: absolute;
+  }
 }
 
 .product-title {
@@ -34,11 +43,27 @@ header {
   line-height: 48px;
 }
 
-// 文字漸層
-@mixin productText($product-title) {
+.product-num {
+  position: absolute;
+  font-weight: bolder;
+  font-size: 48px;
+  line-height: 48px;
+}
+
+.product-subtitle {
+  position: absolute;
+  font-size: 24px;
+  font-weight: bolder;
+  font-style: italic;
+  white-space: nowrap;
+}
+
+/* 文字漸層 */
+
+@mixin productText {
   .product-title::before,
   .product-title::after {
-    content: $product-title;
+    content: attr(data-title);
     display: block;
     position: absolute;
     top: 0px;
@@ -56,7 +81,8 @@ header {
   }
 }
 
-// 圖片設置
+/* 圖片設置 */
+
 @mixin productImg($product-img) {
   background-image: url($product-img);
   background-position: center;
@@ -68,46 +94,35 @@ header {
   background: repeating-linear-gradient(135deg, #50E3C2, #50E3C2 11.5px, transparent 11.5px, transparent 27px, #50E3C2 27px, #50E3C2 35.5px);
 }
 
-.product-num {
-  font-weight: bolder;
-  font-size: 48px;
-  line-height: 48px;
-  position: absolute;
-  top: 100%;
-}
-
-.product-subtitle {
-  position: absolute;
-  transform: rotate(-270deg);
-  font-size: 24px;
-  font-weight: bolder;
-  font-style: italic;
-  top: 345px;
-  left: 90%;
-  white-space: nowrap;
-}
+/* 區塊1 */
 
 .product-1 {
   .product-title {
+    position: absolute;
     top: -14px;
   }
-  @include productText("LINEN BLAZER");
+  @include productText;
   @include productImg("https://images.unsplash.com/photo-1513827379601-9dba5099a3f9?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=1acdd78f34ee75aade9e313251bb1695&auto=format&fit=crop&w=2134&q=80");
+  .product-num {
+    top: 100%;
+  }
+  .product-subtitle {
+    transform: rotate(-270deg);
+    top: 345px;
+    left: 90%;
+  }
+  /*  區塊裝飾   */
+  /*漸層*/
   &::after {
-    content: "";
-    display: block;
-    position: absolute;
-    width: 240px;
-    height: 100px;
+    width: ($width-span*2);
+    height: $height-span;
     bottom: -50px;
     left: 50px;
     @include linear-gradient;
   }
-  &::before {
-    content: "";
-    display: block;
-    position: absolute;
-    width: 240px;
+  /*背後方*/
+  框 &::before {
+    width: ($width-span*2);
     height: 200px;
     top: -50px;
     right: -60px;
@@ -116,26 +131,102 @@ header {
   }
 }
 
+/*區塊2*/
+
 .product-2 {
-  @include productText("FREELIFT");
+  .product-title {
+    top: calc( 100% + 25px);
+    left: 120px;
+  }
+  @include productText;
+  @include productImg("https://images.unsplash.com/photo-1514632542677-48fae74a01b2?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=cf412aceb1d689765e387d30fca7210a&auto=format&fit=crop&w=634&q=80");
+  .product-num {
+    top: (-$height-span);
+    right: (-$width-span);
+  }
+  .product-subtitle {
+    top: -30px;
+    right: $width-span;
+  }
+  /*  區塊裝飾   */
+  /*背後方*/
+  框 &::after {
+    width: ($width-span*2);
+    height: ($height-span*2);
+    top: (-$height-span);
+    right: (-$width-span);
+    border: 20px solid $primary;
+    z-index: -2;
+  }
+  /*背後方框*/
+  &::before {
+    width: ($width-span*2);
+    height: ($height-span*2);
+    top: (-$height-span/2);
+    right: (-$width-span/2);
+    background-color: $primary;
+    z-index: -1;
+  }
 }
+
+/*區塊3*/
 
 .product-3 {
-  @include productText("SUPER SKINNY");
+  .product-title {
+    top: -$height-span/2;
+    right: 0px;
+  }
+  @include productText;
+  @include productImg("https://images.unsplash.com/photo-1496345875659-11f7dd282d1d?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=a0f994eef47e5fb1a67849703cc961b3&auto=format&fit=crop&w=1350&q=80");
+  .product-num {
+    bottom: (-$height-span/2);
+    right: (-$width-span/2);
+  }
+  .product-subtitle {
+    top: 100%;
+    right: $width-span*2;
+  }
+  /*  區塊裝飾   */
+  /*背後方框*/
+  &::after {
+    width: ($width-span*2);
+    height: ($height-span*2);
+    bottom: (-$height-span/2);
+    right: (-$width-span/2);
+    border: 20px solid $primary;
+    z-index: -2;
+  }
+  /*背後方框*/
+  &::before {
+    width: ($width-span*2);
+    height: ($height-span*2);
+    top: (-$height-span/2);
+    left: 0px;
+    background-color: $primary;
+    z-index: -1;
+  }
 }
+
+/*區塊4*/
 
 .product-4 {
-  @include productText("DENIM");
+  @include productText;
 }
+
+/*區塊5*/
 
 .product-5 {
-  @include productText("SWEATSHIRTS");
+  @include productText;
 }
+
+/*區塊6*/
 
 .product-6 {
-  @include productText("VINTAGE DENIM");
+  @include productText;
 }
 
+/*區塊7*/
+
 .product-7 {
-  @include productText("EDITION");
+  @include productText;
 }
