--- a/source/stylesheets/helpers/_grid.scss
+++ b/source/stylesheets/helpers/_grid.scss
@@ -3,6 +3,8 @@
   margin: 0 auto;
 }
 
+$width-span:120px;
+$height-span:100px;
 header {
   grid-column-start: 1;
   grid-column-end: span 8;
@@ -11,13 +13,13 @@ header {
   grid-row-end: 1;
   /* 不設定終點線 */
   border: 1px solid red;
-  height: 100px;
+  height: $height-span;
 }
 
 main {
   display: grid;
-  grid-auto-columns: 120px;
-  grid-auto-rows: 100px;
+  grid-auto-columns: $width-span;
+  grid-auto-rows: $height-span;
   grid-auto-flow: row;
   width: 960px; // min-height: 100vh;
   margin: 0 auto;
